<resources>
    <string name="app_name">List App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="all">Все</string>
    <string name="done">Выполнено</string>
    <string name="inProgress">В прогрессе</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taskTitle">Название задачи</string>
    <string name="createTask">Создать задачу</string>
    <string name="date">Дата</string>
    <string name="dateFormat">%d %s %d</string>
    <string name="dateFormattedWithDot">%s.%s.%s</string>
    <string name="dateAllString">%s %s %s</string>
    <string name="updateTask">Обновить задачу</string>
    <string name="addNewTasks">Добавить новые задачи</string>
    <string name="editTask">Редактировать задачу</string>

    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
</resources>